# data-compression-algos

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  output
include/: bit_manipulating.hpp  coding.hpp  constants.hpp  doctest.h  huffman_coding.hpp  huffman_tree.hpp  statistic.hpp
include/BTW/: btw.hpp  btw_coding.hpp
include/BWT/: bwt.hpp  bwt_coding.hpp  rle.hpp
include/arithmetic/: arithmetic_coding.hpp  bit_buffer.hpp  range.hpp
samples/: args.txt  sample1.txt
src/: bit_manipulating.cpp  coding.cpp  huffman_coding.cpp  huffman_tree.cpp  main.cpp  statistic.cpp  test.cpp
src/BTW/: btw.cpp  btw_coding.cpp  rle.cpp
src/BWT/: bwt.cpp  bwt_coding.cpp  rle.cpp
src/arithmetic/: arithmetic_coding.cpp  bit_buffer.cpp  range.cpp
src/huffman/: huffman_coding.cpp  huffman_tree.cpp
tests/: 01_compress.test.args  02_decompress.test.args  args.txt  sample1.txt  sample_args_1.txt  sample_args_1_dec.txt
